@@ -7,6 +7,7 @@ Changes
  * slapproxy: Filter by instance_guid, allow computer partition renames
               and change of software_type and requested_state [Marco Mariani]
  * slapproxy: Stop instance even if buildout/reporting is wrong [Cedric de Saint Martin]
+ * symlink to software_release in each partition [Marco Mariani]
 
 0.33.1 (2012-11-05)
 -------------------
